# py-atranscribe

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENHANCED_FEATURES.md  FAIILURELOG.md  FILETREE.md  README.md  UPCOMING-FEATURES.md  auto_diarize_transcribe.py  config.yaml  convert_output.py  current_env.txt  demo_enhanced.py  docker-compose.yaml  entrypoint.sh  gemini-analysis.md  linting-errors.md  old_auto_diarize_transcribe.py  output.json  output.srt  output.vtt  py-atranscribe.md  pyproject.toml  requirements.txt  transcribe_diarize.md
.cursor/rules/: python.mdc
.specstory/history/: 2025-07-02_10-00Z-update-pyproject-toml-for-ruff-settings.md  2025-07-02_11-18Z-update-app-to-skip-recent-audio-files.md  2025-07-02_11-25Z-run-ruff-with-all-checks-and-fixes.md
backlog/: config.yml
backlog/tasks/: task-001 - Render-markdown-as-kanban.md  task-002 - Implement-backend-search-API-endpoint.md  task-003 - Add-search-UI-component-to-web-view.md  task-004 - Implement-search-indexing-and-optimization.md  task-005 - Add-search-result-preview-and-navigation.md
scripts/: bss-pyatranscribe.sh
src/: __init__.py  config.py
src/diarization/: __init__.py  diarizer.py
src/monitoring/: __init__.py  file_monitor.py  health_check.py
src/output/: __init__.py  subtitle_manager.py
src/pipeline/: __init__.py  batch_transcriber.py  enhanced_batch_transcriber.py
src/transcription/: __init__.py  enhanced_whisper.py  whisper_factory.py
src/utils/: __init__.py  error_handling.py  file_handler.py
tests/: __init__.py  config_test.py  diarization_test.py  error_handling_test.py  file_handler_test.py  main_app_test.py  monitoring_test.py  pipeline_test.py  subtitle_manager_test.py  test_config.py  test_error_handling.py  test_subtitle_manager.py  transcription_test.py
