[project]
name = "py-atranscribe"
version = "0.1.0"
description = "Automated audio folder transcription and speaker diarization for Docker. Monitors a directory for new audio files, transcribes with faster-whisper, applies pyannote diarization, and outputs timestamped, speaker-labeled transcripts in multiple formats. Robust, container-ready, and fully configurable."
readme = "README.md"
requires-python = ">=3.11.11"
authors = [
    {name = "Robin Collins", email = "robin.f.collins@outlook.com"},
]
keywords = ["transcription", "diarization", "audio", "whisper", "pyannote", "docker", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = {text = "MIT"}
dependencies = [
    # Core transcription and diarization
    "faster-whisper>=1.1.1",
    "pyannote.audio>=3.3.2",
    "transformers>=4.47.1",
    # Audio processing and format support
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    # File monitoring and system utilities
    "watchdog>=3.0.0",
    # Configuration and data handling
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Web server for health checks
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    # Subtitle format support
    "webvtt-py>=0.4.6",
    "srt>=3.5.3",
    # Preprocessing utilities
    "silero-vad>=4.0.0",
    # HTTP client for model downloads
    "httpx>=0.24.0",
    # Logging and monitoring
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.12.1",
]

[project.scripts]
py-atranscribe = "auto_diarize_transcribe:main"

[project.urls]
Homepage = "https://github.com/robinsmj2015/py-atranscribe"
Repository = "https://github.com/robinsmj2015/py-atranscribe"
Issues = "https://github.com/robinsmj2015/py-atranscribe/issues"
Changelog = "https://github.com/robinsmj2015/py-atranscribe/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "F401", "T201"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["T201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
